--- a/transaction.html
+++ b/transaction.html
@@ -388,25 +388,24 @@
     </nav>
 
     <!-- --------------------------------------------- NAVBAR END --------------------------------------------- -->
-      <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
+    <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
 
-      <main id="sidenav-right-content" class="transactions-right">
-        <section id="transaction">
-          <a class="top-fixed-bar" href="./transactions.html">
-            <h2 class="title fs-1919-24 fs-575-20">
-              <!-- <img
+    <main id="sidenav-right-content" class="transactions-right">
+      <section id="transaction">
+        <a class="top-fixed-bar" href="./transactions.html">
+          <h2 class="title fs-1919-24 fs-575-20">
+            <!-- <img
                 class="back"
                 src="./assets/vector/arrow-left.svg"
                 alt="arrow"
               /> -->
-              <img class="back" src="./assets/vector/back-arrow.svg" alt="">
-              Back To Transactions
-            </h2>
-            <h4 class="text-light-2 fs-14 sub">09 May 2021</h4>
-          </a>
+            <img class="back" src="./assets/vector/back-arrow.svg" alt="" />
+            Back To Transactions
+          </h2>
+          <h4 class="text-light-2 fs-14 sub">09 May 2021</h4>
+        </a>
 
-          <div class="lower-content">
-
+        <div class="lower-content">
           <div class="transaction mt-5 pt-lg-4 pt-0">
             <div class="transaction-head">
               <div class="details">
@@ -418,7 +417,9 @@
                     ICICI Prudential Savings Fund (G)
                   </h3>
                   <!-- d-none d-1919-block -->
-                  <h4 class="fs-18 fs-1919-14 text-light-2 mt-2">24 OCT 2021, 05:30 PM</h4>
+                  <h4 class="fs-18 fs-1919-14 text-light-2 mt-2">
+                    24 OCT 2021, 05:30 PM
+                  </h4>
                 </div>
               </div>
               <div class="invest">
@@ -426,7 +427,14 @@
               </div>
               <div class="status">
                 <button
-                  class="btn btn-outlined green w-1919-80 w-768-72 h-1919-24 px-0 py-1"
+                  class="
+                    btn btn-outlined
+                    green
+                    w-1919-80 w-768-72
+                    h-1919-24
+                    px-0
+                    py-1
+                  "
                 >
                   <span class="fs-16 fs-1919-14 fs-768-12 fw-600">Success</span>
                 </button>
@@ -438,9 +446,7 @@
             <div class="transaction-body">
               <div class="type">
                 <h4 class="text-light-2 fs-1919-14">TYPE</h4>
-                <h3 class="fs-20 fw-600 fs-1919-14 fs-768-16">
-                  MUTUAL FUND
-                </h3>
+                <h3 class="fs-20 fw-600 fs-1919-14 fs-768-16">MUTUAL FUND</h3>
               </div>
               <div class="units">
                 <h4 class="text-light-2 fs-1919-14">UNITS</h4>
@@ -448,29 +454,131 @@
               </div>
               <div class="nav-date">
                 <h4 class="text-light-2 fs-1919-14">NAV DATE</h4>
-                <h3 class="fs-20 fw-600 fs-1919-14 fs-768-16">
-                  09 MAY 2021
-                </h3>
+                <h3 class="fs-20 fw-600 fs-1919-14 fs-768-16">09 MAY 2021</h3>
               </div>
               <div class="folio">
                 <h4 class="text-light-2 fs-1919-14">FOLIO</h4>
-                <h3 class="fs-20 fw-600 fs-1919-14 fs-768-16">
-                  577321640866
-                </h3>
+                <h3 class="fs-20 fw-600 fs-1919-14 fs-768-16">577321640866</h3>
               </div>
               <div class="tid">
                 <h4 class="text-light-2 fs-1919-14">TRANSACTION ID</h4>
-                <h3 class="fs-20 fw-600 fs-1919-14 fs-768-16">
-                  PN38462H3HHS6
-                </h3>
+                <h3 class="fs-20 fw-600 fs-1919-14 fs-768-16">PN38462H3HHS6</h3>
               </div>
             </div>
           </div>
-          </div>
-        </section>
+        </div>
+      </section>
 
       <!-- --------------------------------------------- MAIN END --------------------------------------------- -->
+    </main>
+
+    <div id="footer">
+      <div class="footer-main">
+        <div class="footer-navbar">
+          <div class="logo-container d-flex align-items-center">
+            <img src="./assets/images/logo-white.svg" alt="logo" class="logo" />
+          </div>
+          <div class="nav">
+            <a class="fs-18 fs-1919-14" href="#">Home</a>
+            <a class="fs-18 fs-1919-14" href="#">Reads</a>
+            <a class="fs-18 fs-1919-14" href="#">About Us</a>
+            <a class="fs-18 fs-1919-14" href="#">Terms</a>
+          </div>
+          <div class="social">
+            <a href="#"
+              ><img src="./assets/images/youtube-white.svg" alt="youtube"
+            /></a>
+            <a href="#"
+              ><img src="./assets/images/twitter-white.svg" alt="twitter"
+            /></a>
+            <a href="#"
+              ><img src="./assets/images/instagram-white.svg" alt="instagram"
+            /></a>
+            <a href="#"><img src="./assets/images/fb-white.svg" alt="fb" /></a>
+            <a href="#"
+              ><img src="./assets/images/linkedin-white.svg" alt="linkedin"
+            /></a>
+          </div>
+        </div>
+        <hr />
+        <div class="sec-1">
+          <h3
+            class="
+              fs-18 fs-1919-14 fs-991-16
+              lh-768-28
+              fs-575-12
+              mb-3 mb-sm-4
+              fw-700
+            "
+          >
+            For any grievances and/or suggestions please write to
+            feedback@planyy.com
+          </h3>
+          <div class="fs-18 fs-1919-14 fs-575-12 lh-32 lh-1919-28 lg-575-24">
+            <span class="fw-600 fs-18 fs-1919-14 fs-575-12">DISCLAIMER: </span
+            ><span class="fs-18 fs-1919-14 fs-575-12">
+              Investments in securities market are subject to market risks, read
+              all the related documents carefully before investing. All
+              investing involves risk, including the possible loss of money you
+              invest, and past performance does not guarantee future
+              performance. Historical returns, expected returns, and probability
+              projections are provided for informational and illustrative
+              purposes, and may not reflect actual future performance. Please
+              see our Full Disclosure for important details.</span
+            >
+          </div>
+        </div>
+        <hr />
+        <div class="sec-2">
+          <div>
+            <h3 class="fs-18 fs-1919-14 fs-575-12 mb-3 fw-700">
+              Registered Office Address
+            </h3>
+            <div class="fs-18 fs-1919-14 fs-575-12 lh-32 lh-1919-28">
+              Queens Paradise, No. 16/1, 1st Floor Curve Road, Shivaji Nagar,
+              Bengaluru, Karnataka 560071
+            </div>
+          </div>
+          <div>
+            <h3 class="fs-18 fs-1919-14 fs-575-12 mb-3 fw-700">
+              Communication Address
+            </h3>
+            <div class="fs-18 fs-1919-14 fs-575-12 lh-32 lh-1919-28">
+              122, The Summit Bay (By Omkar), near Western Express Highway Metro
+              Station, Chakala, Andheri (East), Mumbai-400069, +91 96425 96425
+            </div>
+          </div>
+        </div>
+        <div class="sec-3">
+          <div>
+            <div class="fs-18 fs-1919-14 fs-575-12 lh-575-24 mb-3">
+              CIN #:- U74900KA2015PTC080747
+            </div>
+            <div class="fs-18 fs-1919-14 fs-575-12 lh-575-24 mb-3">
+              SEBI Registered Investment Advisor INA200005323
+            </div>
+            <div class="fs-18 fs-1919-14 fs-575-12 lh-575-24 mb-3">
+              Mutual Fund distributor with AMFI Registration No. ARN: 103168
+            </div>
+          </div>
+          <div class="comps">
+            <img src="./assets/images/BSE.svg" alt="BSE" />
+            <img src="./assets/images/sebi-white.svg" alt="sebi" />
+            <img src="./assets/images/amei.svg" alt="amei" />
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="copyright">
+        <div class="copyright-main">
+          <div class="fs-16 fs-1919-14 fs-991-12">
+            © 2021 Planny Financial Advisors Private Limited
+          </div>
+          <div class="fs-16 fs-1919-14 fs-991-12">www.planyy.com</div>
+        </div>
+      </div>
     </div>
+
     <!-- --------------------------------------------- Custom scripts --------------------------------------------- -->
     <script defer src="./assets/js/select.js"></script>
   </body>
