--- a/transactions.html
+++ b/transactions.html
@@ -321,7 +321,7 @@
                 />
               </div>
             </a>
-            <a class="transaction">
+            <!-- <a class="transaction">
               <div class="details">
                 <div class="img">
                   <img src="./assets/images/bank_logo-3.svg" alt="logo" />
@@ -396,7 +396,7 @@
                   alt="arrow"
                 />
               </div>
-            </a>
+            </a> -->
           </div>
         </div>
 
