fixes in refer and invest

--- a/uploader.html
+++ b/uploader.html
@@ -115,20 +115,10 @@
 
             <div class="uploading mt-5 d-block d-lg-none last-child desktop">
               <div
-                class="
-                  upload-head
-                  d-flex
-                  justify-content-between
-                  align-items-center
-                "
+                class="upload-head d-flex justify-content-between align-items-center"
               >
                 <div
-                  class="
-                    file-info
-                    d-flex
-                    justify-content-start
-                    align-items-center
-                  "
+                  class="file-info d-flex justify-content-start align-items-center"
                 >
                   <div class="file-img d-flex">
                     <img src="./assets/vector/file.svg" alt="file" />
@@ -138,12 +128,7 @@
                   </div>
                 </div>
                 <div
-                  class="
-                    cancel
-                    d-flex
-                    justify-content-center
-                    align-items-center
-                  "
+                  class="cancel d-flex justify-content-center align-items-center"
                 >
                   <img src="./assets/vector/cancel-upload.svg" alt="cancel" />
                 </div>
@@ -160,7 +145,7 @@
           </div>
         </div>
       </div>
-      <div class="bottom-btn-sm desktop continue">
+      <div class="bottom-btn-sm desktop d-992-none continue">
         <button class="btn btn-bg-primary mt-4">Continue</button>
       </div>
     </section>
