fixes alignment in cards

--- a/service.html
+++ b/service.html
@@ -291,7 +291,7 @@
                       <h3>Moderate</h3>
                     </div>
                   </div>
-                  <div class="msomoderate_box">
+                  <div class="msomoderate_box step1">
                     <img src="./assets/images/growth4.svg" />
                     <label
                       >Conservative<span></span>
