fixes font-size topbar

--- a/service.html
+++ b/service.html
@@ -354,11 +354,11 @@
                   <input type="text" name="" value="31" />
                 </div>
                 <div class="msomobilestatics_p2">
-                  <h4>Monthly <span>Household Income</span></h4>
+                  <h4>Monthly <span class="inner">Household Income</span></h4>
                   <input type="text" name="" value="₹1,00,000" />
                 </div>
                 <div class="msomobilestatics_p3">
-                  <h4>Monthly <span>Expenses</span></h4>
+                  <h4>Monthly <span class="inner">Expenses</span></h4>
                   <input
                     id="monthly-input-box"
                     type="text"
@@ -616,14 +616,14 @@
                       id="car-card"
                       class="Generated_Financial_plans_data_box"
                     >
-                      <a
+                      <!-- <a
                         id="add"
                         data-toggle="modal"
                         data-target="#exampleModal1"
                         class="xhid1"
                       >
                         <img src="./assets/images/close.svg" alt="close" />
-                      </a>
+                      </a> -->
                       <div class="Generated_Financial_plans_data_box_p1">
                         <img src="./assets/images/car.svg" />
                       </div>
@@ -1866,10 +1866,10 @@
                                         >
                                           <!-- <a href="#"></a> -->
                                           <a
-                                              class="edit"
-                                              data-toggle="modal"
-                                              data-target="#exampleModaly"
-                                              ></a>
+                                            class="edit"
+                                            data-toggle="modal"
+                                            data-target="#exampleModaly"
+                                          ></a>
                                           <!-- <a href="#"></a> -->
                                         </div>
                                       </div>
