changes 4.0 approx complete

--- a/service.html
+++ b/service.html
@@ -827,7 +827,8 @@
                     </div>
                     <div class="msoinvestproduct">
                       <h3 class="msoinproh">
-                        Recommended <span>investment products</span>
+                        Recommended
+                        <span class="fw-600">investment products</span>
                         <a data-toggle="modal" data-target="#exampleModalxpand"
                           >EXPAND VIEW</a
                         >
@@ -886,7 +887,7 @@
                               </nav>
                               <div class="tab-content" id="nav-tabContent">
                                 <div
-                                  class="tab-pane fade show active"
+                                  class="tab-pane fade show active step4"
                                   id="nav-homex"
                                   role="tabpanel"
                                   aria-labelledby="nav-home-tabx"
@@ -1220,7 +1221,7 @@
                                     <div class="msoinvestproduct_box_right">
                                       <div class="head">
                                         <div
-                                          class="fw-600 fs-18 fs-1919-14 fs-575-12 title lh-24 lh-1919-18"
+                                          class="fw-600 fs-18 fs-1919-16 fs-575-12 title lh-24 lh-1919-18 lh-575-16"
                                         >
                                           Axis Banking And Financial Services
                                           Growth Direct Plan 2021
@@ -1233,7 +1234,7 @@
                                               alt="star"
                                             />
                                             <div
-                                              class="fw-600 fs-18 fs-1919-14 fs-575-12"
+                                              class="fw-600 fs-18 fs-1919-16 fs-575-12"
                                             >
                                               5
                                             </div>
@@ -1252,7 +1253,7 @@
                                       <div class="body">
                                         <div class="item">
                                           <div
-                                            class="small-text text-light-2 fs-18 fs-1919-14 fs-575-12"
+                                            class="small-text text-light-2 fs-18 fs-1919-16 fs-575-12"
                                           >
                                             Allocation
                                           </div>
@@ -1264,7 +1265,7 @@
                                         </div>
                                         <div class="item">
                                           <div
-                                            class="small-text text-light-2 fs-18 fs-1919-14 fs-575-12"
+                                            class="small-text text-light-2 fs-18 fs-1919-16 fs-575-12"
                                           >
                                             Amount
                                           </div>
@@ -1276,7 +1277,7 @@
                                         </div>
                                         <div class="item">
                                           <div
-                                            class="small-text text-light-2 fs-18 fs-1919-14 fs-575-12 frequency"
+                                            class="small-text text-light-2 fs-18 fs-1919-16 fs-575-12 frequency"
                                           >
                                             Frequency
                                           </div>
@@ -1290,7 +1291,7 @@
                                         </div>
                                         <div class="item">
                                           <div
-                                            class="small-text text-light-2 fs-18 fs-1919-14 fs-575-12"
+                                            class="small-text text-light-2 fs-18 fs-1919-16 fs-575-12"
                                           >
                                             RETURNS(1Y)
                                           </div>
@@ -1414,7 +1415,7 @@
                               ><i class="total"></i
                             ></span>
                           </div>
-                          <div class="planyy_hed_p3_s2">
+                          <div class="planyy_hed_p3_s2" id="top_tol_text">
                             <h5>Risk Tolerance Score</h5>
                             <h3>Moderate</h3>
                           </div>
@@ -1425,8 +1426,10 @@
                           <div class="withdrawalmony_p1_s1">
                             <p>Withdrawal Money</p>
                             <h3>
-                              ₹0.0<span
-                                >CR<img src="./assets/images/prof.svg"
+                              ₹45,000
+                              <span>
+                                <!-- CR -->
+                                <img src="./assets/images/prof.svg"
                               /></span>
                             </h3>
                           </div>
@@ -1479,15 +1482,21 @@
                             <div class="msklasd">
                               <div class="mskalasd1">
                                 <h5>Principal Invested</h5>
-                                <h3>₹ 0.0<span>CR</span></h3>
+                                <h3>
+                                  ₹ 35,000
+                                  <!-- <span>CR</span> -->
+                                </h3>
                               </div>
                               <div class="mskalasd1">
                                 <h5>Current Value</h5>
-                                <h3>₹ 0.0<span>CR</span></h3>
+                                <h3>
+                                  ₹ 35,000
+                                  <!-- <span>CR</span> -->
+                                </h3>
                               </div>
                               <div class="mskalasd1">
                                 <h5>Current ROI</h5>
-                                <h3>0%</h3>
+                                <h3>17%</h3>
                               </div>
                             </div>
                           </div>
@@ -1776,7 +1785,7 @@
                                     <div class="msoinvestproduct_box_right">
                                       <div class="head">
                                         <div
-                                          class="fw-600 fs-18 fs-1919-14 fs-575-12 title lh-24 lh-1919-18"
+                                          class="fw-600 fs-18 fs-1919-16 fs-575-12 title lh-24 lh-1919-18 lh-575-16"
                                         >
                                           Axis Banking And Financial Services
                                           Growth Direct Plan 2021
@@ -1810,7 +1819,7 @@
                                       <div class="body">
                                         <div class="item">
                                           <div
-                                            class="small-text text-light-2 fs-18 fs-1919-14 fs-575-12"
+                                            class="small-text text-light-2 fs-18 fs-1919-16 fs-575-12"
                                           >
                                             Allocation
                                           </div>
@@ -1822,7 +1831,7 @@
                                         </div>
                                         <div class="item">
                                           <div
-                                            class="small-text text-light-2 fs-18 fs-1919-14 fs-575-12"
+                                            class="small-text text-light-2 fs-18 fs-1919-16 fs-575-12"
                                           >
                                             Amount
                                           </div>
@@ -1834,7 +1843,7 @@
                                         </div>
                                         <div class="item">
                                           <div
-                                            class="small-text text-light-2 fs-18 fs-1919-14 fs-575-12"
+                                            class="small-text text-light-2 fs-18 fs-1919-16 fs-575-12"
                                           >
                                             Gain
                                           </div>
@@ -1847,7 +1856,7 @@
 
                                         <div class="item">
                                           <div
-                                            class="small-text text-light-2 fs-18 fs-1919-14 frequency"
+                                            class="small-text text-light-2 fs-18 fs-1919-16 frequency"
                                           >
                                             Frequency
                                           </div>
@@ -2190,6 +2199,7 @@
               <div class="msoretirepop_p1">
                 <img src="./assets/images/retirment.svg" />
               </div>
+              <div class="msoretirepop_white_bg"></div>
               <div class="msoretirepop_p2">
                 <div class="msoretirepop_p2_s1">
                   <p>
@@ -2341,7 +2351,7 @@
                     <label>Monthly Retirement Income</label>
                     <input type="" name="" value="₹1,45,000" />
                   </div>
-                  <div class="msoretirepop_p2_s5_box">
+                  <div class="msoretirepop_p2_s5_box" id="nielson-research">
                     <label>Report based on</label>
                     <input type="" name="" value="Nielsen research" />
                   </div>
@@ -2358,9 +2368,18 @@
                     </li>
                   </ul>
                 </div> -->
-                <div class="msoretirepop_p2mobile_box_p3_btn">
+                <div
+                  class="msoretirepop_p2mobile_box_p3_btn"
+                  id="msoretirepop_cta_container"
+                >
                   <div class="msoretirepop_p2_s2_button">
-                    <a href="#" data-dismiss="modal" aria-label="Close">Done</a>
+                    <a
+                      id="msoretirepop_cta"
+                      href="#"
+                      data-dismiss="modal"
+                      aria-label="Close"
+                      >Done</a
+                    >
                   </div>
                 </div>
               </div>
@@ -2382,7 +2401,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <div class="head fw-700 d-769-none">Add Goals</div>
+            <div class="head fw-600 d-769-none">Add Goals</div>
             <button
               type="button"
               class="close"
@@ -2453,7 +2472,7 @@
                     <a href="#">+ Add</a>
                   </div>
                   <div
-                    class="Generated_Financial_plans_data_box animate__animated animate__bounceInLeft dull animate__slow d-none d-md-block"
+                    class="Generated_Financial_plans_data_box animate__animated animate__bounceInLeft dull animate__slow"
                   >
                     <img src="./assets/images/car.svg" /><img
                       src="./assets/images/car_dull.svg"
@@ -2738,6 +2757,9 @@
                       </div> -->
                     </div>
                     <div class="makepaymentmodel_p1_s7_p2">
+                      <div class="makepaymentmodel_p1_s7_p2_equal">
+                        <img src="./assets/images/barabr.svg" />
+                      </div>
                       <div class="makepaymentmodel_p1_s7_p2_left">
                         <h6>Monthly Instalment</h6>
                         <h3>₹30,000</h3>
@@ -3389,7 +3411,7 @@
       </div>
     </div>
 
-    <div id="footer" class="service-page">
+    <!-- <div id="footer" class="service-page">
       <div class="footer-main">
         <div class="footer-navbar">
           <div class="logo-container d-flex align-items-center">
@@ -3488,7 +3510,7 @@
           <div class="fs-16 fs-1919-14 fs-991-12">www.planyy.com</div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.21/vue.min.js"></script>
