--- a/service.html
+++ b/service.html
@@ -286,7 +286,7 @@
                         ><i class="total"></i
                       ></span>
                     </div>
-                    <div class="planyy_hed_p3_s2">
+                    <div class="planyy_hed_p3_s2" id="top_tol_text_step_2">
                       <h5>Risk Tolerance Score</h5>
                       <h3>Moderate</h3>
                     </div>
