--- a/service.html
+++ b/service.html
@@ -115,6 +115,9 @@
                     src="./assets/images/Notification.svg"
                     alt="notification"
                   />
+                  <div class="count">
+                    3
+                  </div>
                 </div>
                 <div class="item">
                   <img src="./assets/images/Cart.svg" alt="cart" />
