--- a/details.html
+++ b/details.html
@@ -282,7 +282,7 @@
           </div>
         </div>
       </div>
-      <div class="bottom-btn-sm desktop continue">
+      <div class="bottom-btn-sm desktop continue d-992-none">
         <button class="btn btn-bg-primary mt-4">Continue</button>
       </div>
     </section>
