--- a/financial-planning.html
+++ b/financial-planning.html
@@ -1065,7 +1065,7 @@
       <!-- --------------------------------------------- SUGGESTIONS END --------------------------------------------- -->
     </main>
 
-    <div id="footer">
+    <!-- <div id="footer">
       <div class="footer-main">
         <div class="footer-navbar">
           <div class="logo-container d-flex align-items-center">
@@ -1170,7 +1170,7 @@
           <div class="fs-16 fs-1919-14 fs-991-12">www.planyy.com</div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
 
