--- a/profile.html
+++ b/profile.html
@@ -60,13 +60,7 @@
       <section id="profile">
         <div class="container-fluid pt-2 p-sm-0 ps-2">
           <a
-            class="
-              d-flex
-              justify-content-start
-              align-items-center
-              my-profile
-              top-fixed-bar
-            "
+            class="d-flex justify-content-start align-items-center my-profile top-fixed-bar"
             href="./transactions.html"
           >
             <img
@@ -82,13 +76,7 @@
           <div class="container-fluid lower-content">
             <div class="row justify-content-center">
               <div
-                class="
-                  col-lg-9 col-sm-12 col-12
-                  order-lg-1 order-2
-                  row
-                  px-0
-                  form
-                "
+                class="col-lg-9 col-sm-12 col-12 order-lg-1 order-2 row px-0 form"
               >
                 <div class="col-sm-6 pan">
                   <div class="custom-form-control">
@@ -415,7 +403,7 @@
       </section>
     </main>
 
-    <div id="footer">
+    <!-- <div id="footer">
       <div class="footer-main">
         <div class="footer-navbar">
           <div class="logo-container d-flex align-items-center">
@@ -520,7 +508,7 @@
           <div class="fs-16 fs-1919-14 fs-991-12">www.planyy.com</div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- --------------------------------------------- MAIN END --------------------------------------------- -->
 
