--- a/refer-and-invest.html
+++ b/refer-and-invest.html
@@ -430,12 +430,7 @@
                 </div>
                 <div class="sub-section">
                   <h4
-                    class="
-                      text-light-2
-                      fs-18 fs-1919-14 fs-650-14
-                      mb-sm
-                      small-text
-                    "
+                    class="text-light-2 fs-18 fs-1919-14 fs-650-14 mb-sm small-text"
                   >
                     PENDING
                   </h4>
@@ -455,12 +450,7 @@
                 </div>
                 <div class="sub-section">
                   <button
-                    class="
-                      btn btn-bg-primary
-                      primary
-                      flex-grow-0
-                      fs-24 fs-1919-16
-                    "
+                    class="btn btn-bg-primary primary flex-grow-0 fs-24 fs-1919-16"
                   >
                     Invest
                   </button>
@@ -554,12 +544,7 @@
                 </div>
                 <div class="sub-section d-flex justify-content-center reminder">
                   <button
-                    class="
-                      btn btn-bg-primary
-                      primary
-                      flex-grow-0
-                      fs-24 fs-1919-16
-                    "
+                    class="btn btn-bg-primary primary flex-grow-0 fs-24 fs-1919-16"
                   >
                     Sent Reminder
                   </button>
@@ -570,7 +555,7 @@
         </div>
       </section>
     </main>
-    <div id="footer">
+    <!-- <div id="footer">
       <div class="footer-main">
         <div class="footer-navbar">
           <div class="logo-container d-flex align-items-center">
@@ -675,7 +660,7 @@
           <div class="fs-16 fs-1919-14 fs-991-12">www.planyy.com</div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- --------------------------------------------- MAIN END --------------------------------------------- -->
     <!-- JQUERY -->
