--- a/transaction.html
+++ b/transaction.html
@@ -427,14 +427,7 @@
               </div>
               <div class="status">
                 <button
-                  class="
-                    btn btn-outlined
-                    green
-                    w-1919-80 w-768-72
-                    h-1919-24
-                    px-0
-                    py-1
-                  "
+                  class="btn btn-outlined green w-1919-80 w-768-72 h-1919-24 px-0 py-1"
                 >
                   <span class="fs-16 fs-1919-14 fs-768-12 fw-600">Success</span>
                 </button>
@@ -472,7 +465,7 @@
       <!-- --------------------------------------------- MAIN END --------------------------------------------- -->
     </main>
 
-    <div id="footer">
+    <!-- <div id="footer">
       <div class="footer-main">
         <div class="footer-navbar">
           <div class="logo-container d-flex align-items-center">
@@ -503,13 +496,7 @@
         <hr />
         <div class="sec-1">
           <h3
-            class="
-              fs-18 fs-1919-14 fs-991-16
-              lh-768-28
-              fs-575-12
-              mb-3 mb-sm-4
-              fw-700
-            "
+            class="fs-18 fs-1919-14 fs-991-16 lh-768-28 fs-575-12 mb-3 mb-sm-4 fw-700"
           >
             For any grievances and/or suggestions please write to
             feedback@planyy.com
@@ -577,7 +564,7 @@
           <div class="fs-16 fs-1919-14 fs-991-12">www.planyy.com</div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- --------------------------------------------- Custom scripts --------------------------------------------- -->
     <script defer src="./assets/js/select.js"></script>
