--- a/transactions.html
+++ b/transactions.html
@@ -56,12 +56,7 @@
         <div class="title top-fixed-bar">
           <div id="dark-overlay-dropdown"></div>
           <div
-            class="
-              transactions-head
-              d-flex
-              justify-content-between
-              align-items-center
-            "
+            class="transactions-head d-flex justify-content-between align-items-center"
           >
             <h2 class="fs-1919-24 fs-575-20">
               <img class="back" src="./assets/vector/back-arrow.svg" alt="" />
@@ -406,7 +401,7 @@
 
     <!-- --------------------------------------------- MAIN END --------------------------------------------- -->
     <!-- </div> -->
-    <div id="footer">
+    <!-- <div id="footer">
       <div class="footer-main">
         <div class="footer-navbar">
           <div class="logo-container d-flex align-items-center">
@@ -511,7 +506,7 @@
           <div class="fs-16 fs-1919-14 fs-991-12">www.planyy.com</div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- --------------------------------------------- Custom scripts --------------------------------------------- -->
     <script defer src="./assets/js/select.js"></script>
   </body>
