--- a/notifications.html
+++ b/notifications.html
@@ -336,7 +336,7 @@
       </section>
     </main>
 
-    <div id="footer">
+    <!-- <div id="footer">
       <div class="footer-main">
         <div class="footer-navbar">
           <div class="logo-container d-flex align-items-center">
@@ -441,7 +441,7 @@
           <div class="fs-16 fs-1919-14 fs-991-12">www.planyy.com</div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- --------------------------------------------- Custom scripts --------------------------------------------- -->
 
