--- a/service.html
+++ b/service.html
@@ -115,9 +115,7 @@
                     src="./assets/images/Notification.svg"
                     alt="notification"
                   />
-                  <div class="count">
-                    3
-                  </div>
+                  <div class="count">3</div>
                 </div>
                 <div class="item">
                   <img src="./assets/images/Cart.svg" alt="cart" />
@@ -3020,7 +3018,15 @@
           <div class="modal-body">
             <div class="paymentsusedit">
               <ul>
-                <li><img src="./assets/images/editasdx.svg" /> Edit Goal</li>
+                <li>
+                  <a
+                    data-toggle="modal"
+                    class="close"
+                    data-dismiss="modal"
+                    data-target="#exampleModal"
+                    ><img src="./assets/images/editasdx.svg" /> Edit Goal</a
+                  >
+                </li>
                 <li>
                   <img src="./assets/images/deleteasdx.svg" /> Delete Goal
                 </li>
